fix search results overflow direction

--- a/+/styles/admin/_settings.scss
+++ b/+/styles/admin/_settings.scss
@@ -483,7 +483,7 @@ tr.glsr-setting-field td label::after {
     left: 0;
     width: 100%;
     max-height: 315px;
-    overflow-x: scroll;
+    overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
     border: 1px solid #7e8993;
     border-top: none;
